# ibus-table-taiji

./: Makefile.am  README  autogen.sh  configure.ac
icons/: Makefile.am
tables/: Makefile.am  taiji.txt
